fixed lang attribute value

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs_CZ">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
       name="description"
       content="Průvodce studenta UTB je interaktivní průvodce, který umožňuje ať nastávajícím, tak i aktuálním studentům, či široké veřejnosti přiblížit dění na univerzitě Tomáše Bati ve Zlíně samotné, tak i kulturní dění ve městě Zlín."
     />
-    <meta property="og:locale" content="cs_CZ" />
+    <meta property="og:locale" content="cs" />
     <meta property="og:url" content="http://pruvodcestudenta.utb.cz/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Průvodce studenta UTB" />
